# RayCer

./: .gitignore  Camera.h  Cargo.toml  Color.h  Image.h  LICENSE  README.md  Ray.h  RayCer.cpp  Scene.h  SceneObject.h  Surface.h  Vec.h
Deprecated/: Camera.h  Color.h  Material.h  RayCer.cpp
src/: camera_cer.rs  cer_mat.rs  cer_object.rs  image_cer.rs  main.rs  ray.rs  scene_cer.rs
